2008-12-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/tm_basic.cxx (STACK_SIZE): Revert accidental change of
	stack size back to CYGNUM_HAL_STACK_SIZE_MINIMUM. Changed by
	accident at same time as change below of 2006-12-08.

2008-11-18  Sergei Gavrikov  <sergei.gavrikov@gmail.com>

	* tests/tm_basic.cxx (max): Actually the meaning was right before,
	it was just the name that was wrong. So revert below, and change 
	name to min.

2008-11-14  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/tm_basic.cxx (max): Was wrong way round. Resolves issue
	1000636.

2008-07-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/thread.inl: Silence some warnings by assigning
	string literals to const char *, not char *.

2007-08-23  Hans Rosenfeld  <rosenfeld@grumpf.hope-2000.org>

	* tests/intr0.cxx, tests/kintr0.c: As suggested by Bart Veer,
	priorities of the interrupts created by intr0 and kintr0 can now
	be overridden by the HAL through HAL_INTR_TEST_PRIO_x constants.

2007-07-02  Gary Thomas  <gary@mlbassoc.com>

	* src/debug/dbg_gdb.cxx: 
	* src/common/thread.cxx (Cyg_IdleThread): Add (char *) casts
	to make GCC/4.2.x happy.

2007-06-11  Nick Garnett  <nickg@ecoscentric.com>

	* tests/klock.c (entry0, entry1): Modify mbox part of test to
	reflect use of plain mbox implementation. The precise ordering of
	events is slightly different.

2007-01-07  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/sync/mbox.cxx (Cyg_Mbox::get): Fix compiler warning with gcc
	version 4.1.2.

2006-12-08  Nick Garnett  <nickg@ecoscentric.com>
	
        * src/sched/mlqueue.cxx (add_thread, yield): 
	* src/sched/sched.cxx (unlock_inner, thread_entry): 
	* include/mlqueue.hxx (class Cyg_SchedThread_Implementation):
	* include/kapidata.h (CYG_SCHEDTHREAD_TIMESLICE_MEMBER): 
	* include/bitmap.hxx (class Cyg_SchedThread_Implementation):
	Reimplement timeslicing code. There is now a timeslice_count field
	in each thread which is moved to and from the per-CPU counter