@@ -1,3 +1,9 @@
+2009-05-14  John Dallaway  <john@dallaway.org.uk>
+
+	* src/common/thread.cxx: Use the Cyg_Scheduler::get_current_thread()
+	convenience function when instrumenting thread events. Bug reported
+	by Pieter-Jan Busschaert.
+
 2008-12-18  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* tests/tm_basic.cxx (STACK_SIZE): Revert accidental change of
@@ -4740,7 +4746,7 @@ Wed Mar 11 13:18:17 GMT 1998  Chris Provenzano  <proven@cygnus.com>
 // ####GPLCOPYRIGHTBEGIN####                                                
 // -------------------------------------------                              
 // This file is part of eCos, the Embedded Configurable Operating System.   
-// Copyright (C) 1998, 1999, 2000, 2001, 2002 Free Software Foundation, Inc.
+// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2009 Free Software Foundation, Inc.
 //
 // This program is free software; you can redistribute it and/or modify     
 // it under the terms of the GNU General Public License as published by     
